--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="on_loan_alert">Currently on loan.\nAlert when available?</string>
     <string name="add_alert">Add alert</string>
     <string name="alert_added">Alert added!</string>
+    <string name="not_tracking_yet">You aren\'t following any course materials yet. Press the + to get started.</string>
 </resources>
