Create more detail for the citation list layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="not_tracking_yet">You aren\'t following any course materials yet. Press the + to get started.</string>
     <string name="instruction_text">Search for your classes to see course materials available through BU Libraries. Use course codes like \"BI203\".</string>
     <string name="no_matches_found">No courses matching that code could be found. Please try again.</string>
+    <string name="track">Track</string>
 </resources>
